--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/joc.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Escenes/joc.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Imatges/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -34,19 +34,19 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Escenes/nau.tscn", "res://Escenes/joc.tscn", "res://Escenes/explosió.tscn", "res://Escenes/meteorit.tscn", "res://Escenes/game_over.tscn", "res://Escenes/laser.tscn", "res://Escenes/marcador.tscn", "res://Escenes/power_up_bomba.tscn", "res://Escenes/power_up_vida.tscn")
-current_scene="res://Escenes/joc.tscn"
+open_scenes=PackedStringArray("res://Escenes/nau.tscn", "res://Escenes/escenaprincipal.tscn", "res://Escenes/joc.tscn", "res://Escenes/explosió.tscn", "res://Escenes/meteorit.tscn", "res://Escenes/game_over.tscn", "res://Escenes/laser.tscn", "res://Escenes/marcador.tscn", "res://Escenes/power_up_bomba.tscn", "res://Escenes/power_up_vida.tscn")
+current_scene="res://Escenes/escenaprincipal.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/BarraVida.gd", "res://Scripts/explosió.gd", "res://Scripts/GameOver.gd", "res://Scripts/joc.gd", "res://Scripts/Laser.gd", "res://Scripts/Marcador.gd", "res://Scripts/Meteorit.gd", "res://Scripts/nau.gd", "res://Scripts/PowerUPBomba.gd", "res://Scripts/power_up_vida.gd"]
-selected_script="res://Scripts/nau.gd"
+open_scripts=["res://Scripts/BarraVida.gd", "res://Scripts/escenaprincipal.gd", "res://Scripts/explosió.gd", "res://Scripts/GameOver.gd", "res://Scripts/joc.gd", "res://Scripts/Laser.gd", "res://Scripts/Marcador.gd", "res://Scripts/Meteorit.gd", "res://Scripts/nau.gd", "res://Scripts/PowerUPBomba.gd", "res://Scripts/power_up_vida.gd"]
+selected_script="res://Scripts/escenaprincipal.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=194
 list_split_offset=0
 zoom_factor=1.0
 
@@ -65,5 +65,5 @@ position=Vector2i(0, 23)
 
 [GameView]
 
-floating_window_rect=Rect2i(852, 507, 1355, 741)
+floating_window_rect=Rect2i(378, 155, 1164, 695)
 floating_window_screen=0
