--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Escenes/joc.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Imatges/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Imatges/", "res://Escenes/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
